# translate-dashboard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPRECATED.md  FAQ.md  README.md  config.json  config.ncl
src/: app.rs  config.rs  lib.rs  main.rs
src/backend/: gpu.rs  mod.rs  translate.rs  worker.rs
src/connectors/: claude.rs  deepl.rs  gemma.rs  mod.rs
src/jobs/: mod.rs  sentry.rs  translate.rs
src/ui/: gpu_panel.rs  help.rs  jobs_panel.rs  log_panel.rs  mod.rs  new_job.rs  status_bar.rs
